...
  }

  return (
    <View style={{ flex: 1, backgroundColor: theme.bg }}>
      <Sentry.TimeToInitialDisplay record />
      <ScrollView
        testID="home-screen"
        style={{ flex: 1 }}
        contentContainerStyle={{
          ...readableWidth,
          paddingBottom: bottomPadding,
          paddingTop: insets.top,
        }}
...
